# the-source

./: .gitignore  CLAUDE.md  README.md  README_EN.md  save-later-systems-analysis.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: CLAUDE.md  items.py  social.py  sync.py
backend/app/core/: __init__.py  credentials.py
backend/app/repositories/: CLAUDE.md  item_repo.py  social_repo.py  sync_repo.py
backend/app/schemas/: CLAUDE.md  __init__.py  item.py  social.py  sync.py
backend/app/services/: item_service.py  reddit_fetcher.py  title_fetcher.py
backend/app/services/social_checker/: __init__.py  hackernews.py  reddit.py  service.py
backend/app/services/sync/: __init__.py  base.py  raindrop.py  reddit.py  reddit_gdpr.py  youtube.py
backend/migrations/: 001_initial.sql  002_sync_log.sql  003_add_modified_from_source.sql  004_add_url_to_fts.sql  005_social_mentions.sql  006_link_checks.sql  007_link_status.sql  008_nsfw_status.sql  009_spaced_repetition.sql  010_reddit_details_cache.sql
backend/tests/: __init__.py
docs/plans/: 2026-01-13-social-presence-checker.md
frontend/: CLAUDE.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  CLAUDE.md  index.css  routeTree.gen.ts
frontend/src/hooks/: use-theme.tsx  usePreferences.ts
frontend/src/lib/: CLAUDE.md  api-client.ts  query-client.ts  url-utils.ts  utils.ts
frontend/src/routes/: __root.tsx  (+1 more)
scripts/: check-broken-links.ts  detect-nsfw-content.ts  duplicates-report.json  find-duplicate-links.ts
(+63 files in other folders)
